# aham

./: .gitignore  IntroTutorial.ipynb  LICENSE  README.md  example.py  id2tiab.tsv  pyproject.toml
aham/: __init__.py  aham_topic_modeling.py  config.py  data.py  evaluation.py  example.py  grid_search.py  llama.py  llm.py  modeling.py  pyproject.toml  test_run.py
aham/aham/: evaluation.py  grid_search.py  llama.py
