[project]
name = "aham"
version = "0.1.0"
description = ""
authors = [
    {name = "bkolosk1",email = "bosec99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "bertopic (>=0.16.4,<0.17.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "bitsandbytes (>=0.45.1,<0.46.0)",
    "xformers (>=0.0.29.post2,<0.0.30)",
    "adjusttext (>=1.3.0,<2.0.0)",
    "einops (>=0.8.0,<0.9.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "protobuf (==3.20.3)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
