[project]
name = "aham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.4.0",
    "bertopic>=0.16.4",
    "bitsandbytes>=0.45.3",
    "datasets>=3.3.2",
    "fuzzywuzzy>=0.18.0",
    "jupyterlab>=4.3.5",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.1",
    "protobuf>=6.30.0",
    "sentence-transformers>=3.4.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.49.0",
]
